--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "speedy-tree",
   "version": "0.1.0",
   "description": "Nested tree visualization widget",
-  "main": "index.js",
+  "main": "lib",
   "scripts": {
-    "clean": "shx rm -rf dist && rm -f example/bundle.js",
-    "prepare": "npm run clean && NODE_ENV=production webpack -p --progress",
-    "build:watch": "webpack --watch",
-    "start": "npm run clean && webpack && webpack-dev-server",
+    "clean": "shx rm -rf lib && rm -f example/bundle.js",
+    "build": "npm run clean && npm run build:js && npm run build:css",
+    "build:js": "babel src --out-dir lib",
+    "build:css": "shx cp src/*.css lib/",
+    "build:example": "npm run build && webpack --progress",
+    "start": "npm run build:example && webpack-dev-server",
+    "prepare": "npm run build",
     "patch": "VERSION=patch npm run publish:version",
     "minor": "VERSION=minor npm run publish:version",
     "major": "VERSION=major npm run publish:version",
@@ -37,6 +40,7 @@
     "d3": "^5.0.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.3",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-preset-airbnb": "^2.4.0",
