basic graph support

--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "main": "lib",
   "scripts": {
     "clean": "shx rm -rf lib && rm -f example/bundle.js",
-    "build": "npm run clean && npm run build:js && npm run build:css",
+    "build": "npm run build:js && npm run build:css",
     "build:js": "babel src --out-dir lib",
     "build:css": "shx cp src/*.css lib/",
-    "build:example": "npm run build && webpack --progress",
-    "start": "npm run build:example && webpack-dev-server",
-    "prepare": "npm run build",
+    "build:example": "webpack --progress",
+    "start": "npm run clean && npm run build:example && webpack-dev-server",
+    "prepare": "npm run clean && npm run build",
     "patch": "VERSION=patch npm run publish:version",
     "minor": "VERSION=minor npm run publish:version",
     "major": "VERSION=major npm run publish:version",
