--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "lib",
   "scripts": {
     "clean": "shx rm -rf lib && rm -f example/bundle.js && rm -f example/styles.css",
-    "build": "npm run build:js && npm run build:css",
+    "build": "npm run clean && npm run build:js && npm run build:css",
     "build:js": "babel src --out-dir lib",
     "build:css": "shx cp src/*.css lib/",
-    "build:example": "webpack --progress",
-    "start": "npm run clean && npm run build:example && webpack-dev-server",
-    "prepare": "npm run clean && npm run build",
+    "build:example": "npm run clean && webpack --progress",
+    "start": "npm run build:example && webpack-dev-server --content-base example",
+    "deploy": "npm run build:example && gh-pages-deploy",
+    "prepare": "npm run build",
     "patch": "VERSION=patch npm run publish:version",
     "minor": "VERSION=minor npm run publish:version",
     "major": "VERSION=major npm run publish:version",
@@ -37,6 +38,9 @@
     "url": "https://github.com/noahsug/grouped-graph/issues"
   },
   "homepage": "https://github.com/noahsug/grouped-graph#readme",
+  "gh-pages-deploy": {
+    "staticpath": "example"
+  },
   "dependencies": {
     "d3": "^5.0.0"
   },
